gas/testsuite/gas/i386/x86-64-optimize-2.d
@@ -222,4 +222,5 @@ Disassembly of section .text:
  +[a-f0-9]+:	66 .*	pxor   %xmm12,%xmm12
  +[a-f0-9]+:	c5 .*	vpxor  %xmm2,%xmm2,%xmm8
  +[a-f0-9]+:	c5 .*	vpxor  %ymm0,%ymm0,%ymm1
+ +[a-f0-9]+:	c4 .*	vfnmadd231sd %xmm9,%xmm2,%xmm0
 #pass
